# wiremock-ui

./: Cargo.toml  LICENSE.md  README.md  test.http
.github/workflows/: continuous-delivery-pipeline.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/requests/: mod.rs  request.rs  state.rs
api/src/responses/: mapping.rs  mod.rs  object.rs  request.rs  response.rs  scenario.rs
stubbing/__files/: myfile.xml
stubbing/mappings/: basics_default_reponse.json  basics_get_binary_body.json  basics_get_body.json  basics_get_file_body.json  basics_get_json_body.json  basics_stub_priority.json  get_list_added.json  get_list_started.json  get_response_headers.json  get_some_thing.json  post_list_add.json  scenario_get_todo_items.json  scenario_get_todo_items_added.json  scenarios_post_todo_items.json
ui/: Cargo.toml
ui/src/: lib.rs  main.rs  scenario.rs  wiremock_app.rs
wiremock/: Cargo.toml
wiremock/src/: lib.rs
