[workspace]
members = [
    "api",
    "ui",
    "wiremock"
]

[workspace.package]
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
description = "A wiremock Ui application to change scenario states on the fly."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"

[workspace.dependencies]
# local crates
api = { path = "./api" }
wiremock = { path = "./wiremock" }

# 3rd party
anyhow = "1.0.75"
eframe = "0.23.0"
httpmock = "0.6"
hyper = { version = "0.14", features = ["full"] }
notify = { version = "6.1.1" }
rand = "0.8.5"
reqwest = "0.11.21"
rfd = "0.12.0"
serde = "1.0.183"
serde_json = "1.0.66"
stubr = "0.6.2"
tokio = { version = "1", features = ["full"] }
tokio-codec = "0.1"
