[package]
name = "ui"
description = "Manages all media items in the database and on filesystem."
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# local crates
api.workspace = true
wiremock.workspace = true

# crates
eframe.workspace = true
tokio.workspace = true
rfd.workspace = true
serde = { version = "1.0.188", features = ["derive"] }
