[package]
name = "wiremock"
description = "Handles the wiremock process."
version.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
notify.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-codec.workspace = true
